fix serverLayout bug

--- a/src/components/server-layout/ServerLayout.module.scss
+++ b/src/components/server-layout/ServerLayout.module.scss
@@ -11,5 +11,13 @@
 	}
 
 	.contentContainer {
+		width: 100%;
+		background-color: var(--background);
+
+		.content {
+			max-width: 1400px;
+			margin: 0 auto;
+			padding: 1.5rem;
+		}
 	}
 }
